--- a/backend/sample.env
+++ b/backend/sample.env
@@ -3,3 +3,14 @@ SECRET_ACCESS_KEY = "21abe1734f18bc80397ece52563f25f23c39ba2e47d69f416247d6d20f3
 
 AWS_SECRET_KEY = oC2ndG75KTrKAeJmZ4Y7fgzDg7zPKMNeb9TlOH9D
 AWS_ACCESS_KEY = AKIAQXA7HWAYZ2FJDCIF
+
+
+USERNAME = "root"
+PASSWORD = "root"
+DB_NAME = "yeh_hai"
+HOST = "localhost"
+DIALECT = "mysql"
+
+CLOUD_NAME = df5sadbos
+CLOUD_API_KEY = 283299832225732
+CLOUD_SECRET_KEY = 4zmhBhqqCpblXFspeThUO51j-ak
