--- a/backend/package.json
+++ b/backend/package.json
@@ -5,23 +5,27 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "aws-sdk": "^2.1432.0",
-      "bcrypt": "^5.1.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "firebase-admin": "^11.10.1",
-      "jsonwebtoken": "^9.0.1",
-      "mongoose": "^7.3.2",
-      "nanoid": "^4.0.2"
+        "babel-register": "^6.26.0",
+        "bcrypt": "^5.1.0",
+        "cloudinary": "^1.41.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "firebase-admin": "^11.10.1",
+        "jsonwebtoken": "^9.0.1",
+        "mongoose": "^7.3.2",
+        "mysql2": "^3.6.5",
+        "nanoid": "^4.0.2",
+        "sequelize": "^6.35.2"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "sequelize-cli": "^6.6.2"
     }
-  }
+}
